--- a/SustainabilityAppV1/Base.lproj/Main.storyboard
+++ b/SustainabilityAppV1/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
@@ -984,6 +984,9 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="0.0" y="0.0" width="398" height="845"/>
+                                </variation>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1032,8 +1035,7 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="search" id="ixd-Yv-s7B">
                             <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
-                                <action selector="search:" destination="QYY-GH-OmI" id="hKR-jZ-Dge"/>
-                                <segue destination="lEI-4c-kl2" kind="show" id="2JE-6u-rC5"/>
+                                <action selector="search:" destination="QYY-GH-OmI" id="g85-k9-8It"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -1044,7 +1046,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NEk-eL-pXu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3121.5" y="-2924.25"/>
+            <point key="canvasLocation" x="2890.5" y="-2700.75"/>
         </scene>
         <!--Edit User Account-->
         <scene sceneID="hOG-7d-hPa">
@@ -1286,7 +1288,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="QYY-GH-OmI" kind="relationship" relationship="rootViewController" id="apz-S7-4wg"/>
+                        <segue destination="lEI-4c-kl2" kind="relationship" relationship="rootViewController" id="SGa-3f-hGw"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J6e-YZ-3fW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1309,9 +1311,6 @@
                                 <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="47" y="20" width="302" height="30"/>
-                                </variation>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Wl-Rc-un6">
                                 <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
@@ -1326,9 +1325,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="16" y="62" width="73" height="21"/>
-                                </variation>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Max Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="45K-0K-Lfn">
                                 <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
@@ -1506,38 +1502,38 @@
                                 <exclude reference="CPT-Ea-2lm"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="HFs-uG-Mmq"/>
+                                <exclude reference="8eF-Ag-KRS"/>
+                                <exclude reference="hg9-lL-fCQ"/>
+                                <exclude reference="8lu-cE-GO4"/>
+                                <exclude reference="GkC-pH-GcM"/>
+                                <exclude reference="fgv-OS-3bM"/>
                                 <exclude reference="MsM-eQ-nnQ"/>
                                 <exclude reference="N1T-Xn-jE2"/>
                                 <exclude reference="7FA-3Z-A1N"/>
                                 <exclude reference="JAu-sj-f7f"/>
                                 <exclude reference="LdO-JI-3dT"/>
-                                <exclude reference="8eF-Ag-KRS"/>
-                                <exclude reference="hg9-lL-fCQ"/>
                                 <exclude reference="nB1-m6-kMO"/>
                                 <exclude reference="wgG-uO-wQQ"/>
-                                <exclude reference="1uP-fn-evp"/>
-                                <exclude reference="d7m-hG-6Du"/>
                                 <exclude reference="Lpf-fm-9N2"/>
                                 <exclude reference="jda-xW-JHB"/>
-                                <exclude reference="HFs-uG-Mmq"/>
+                                <exclude reference="1uP-fn-evp"/>
+                                <exclude reference="d7m-hG-6Du"/>
                                 <exclude reference="4AF-6i-Uw7"/>
                                 <exclude reference="Ctr-GP-bhM"/>
-                                <exclude reference="8lu-cE-GO4"/>
-                                <exclude reference="GkC-pH-GcM"/>
-                                <exclude reference="fgv-OS-3bM"/>
+                                <exclude reference="Hqg-4x-4ko"/>
+                                <exclude reference="Svk-GA-Gp7"/>
+                                <exclude reference="pSU-Dq-PR3"/>
                                 <exclude reference="lYa-Ww-XpV"/>
                                 <exclude reference="IMG-nv-pyB"/>
                                 <exclude reference="XF1-KC-pHg"/>
                                 <exclude reference="m0k-WZ-5YB"/>
-                                <exclude reference="Eie-9x-IQz"/>
-                                <exclude reference="b1F-rG-S29"/>
-                                <exclude reference="gfq-MN-Ot6"/>
                                 <exclude reference="AHU-eT-hSF"/>
                                 <exclude reference="Vug-5D-Sfi"/>
                                 <exclude reference="qFX-NH-ilo"/>
-                                <exclude reference="Hqg-4x-4ko"/>
-                                <exclude reference="Svk-GA-Gp7"/>
-                                <exclude reference="pSU-Dq-PR3"/>
+                                <exclude reference="Eie-9x-IQz"/>
+                                <exclude reference="b1F-rG-S29"/>
+                                <exclude reference="gfq-MN-Ot6"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -1558,38 +1554,38 @@
                                 <include reference="CPT-Ea-2lm"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="HFs-uG-Mmq"/>
+                                <include reference="8eF-Ag-KRS"/>
+                                <include reference="hg9-lL-fCQ"/>
+                                <include reference="8lu-cE-GO4"/>
+                                <include reference="GkC-pH-GcM"/>
+                                <include reference="fgv-OS-3bM"/>
                                 <include reference="MsM-eQ-nnQ"/>
                                 <include reference="N1T-Xn-jE2"/>
                                 <include reference="7FA-3Z-A1N"/>
                                 <include reference="JAu-sj-f7f"/>
                                 <include reference="LdO-JI-3dT"/>
-                                <include reference="8eF-Ag-KRS"/>
-                                <include reference="hg9-lL-fCQ"/>
                                 <include reference="nB1-m6-kMO"/>
                                 <include reference="wgG-uO-wQQ"/>
-                                <include reference="1uP-fn-evp"/>
-                                <include reference="d7m-hG-6Du"/>
                                 <include reference="Lpf-fm-9N2"/>
                                 <include reference="jda-xW-JHB"/>
-                                <include reference="HFs-uG-Mmq"/>
+                                <include reference="1uP-fn-evp"/>
+                                <include reference="d7m-hG-6Du"/>
                                 <include reference="4AF-6i-Uw7"/>
                                 <include reference="Ctr-GP-bhM"/>
-                                <include reference="8lu-cE-GO4"/>
-                                <include reference="GkC-pH-GcM"/>
-                                <include reference="fgv-OS-3bM"/>
+                                <include reference="Hqg-4x-4ko"/>
+                                <include reference="Svk-GA-Gp7"/>
+                                <include reference="pSU-Dq-PR3"/>
                                 <include reference="lYa-Ww-XpV"/>
                                 <include reference="IMG-nv-pyB"/>
                                 <include reference="XF1-KC-pHg"/>
                                 <include reference="m0k-WZ-5YB"/>
-                                <include reference="Eie-9x-IQz"/>
-                                <include reference="b1F-rG-S29"/>
-                                <include reference="gfq-MN-Ot6"/>
                                 <include reference="AHU-eT-hSF"/>
                                 <include reference="Vug-5D-Sfi"/>
                                 <include reference="qFX-NH-ilo"/>
-                                <include reference="Hqg-4x-4ko"/>
-                                <include reference="Svk-GA-Gp7"/>
-                                <include reference="pSU-Dq-PR3"/>
+                                <include reference="Eie-9x-IQz"/>
+                                <include reference="b1F-rG-S29"/>
+                                <include reference="gfq-MN-Ot6"/>
                             </mask>
                         </variation>
                     </view>
@@ -1597,23 +1593,16 @@
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="CIZ-S7-iyh">
                             <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
-                                <action selector="cancel:" destination="lEI-4c-kl2" id="gPA-4U-opG"/>
-                                <segue destination="QYY-GH-OmI" kind="show" id="Tny-Yr-Qck"/>
+                                <action selector="cancel:" destination="lEI-4c-kl2" id="BwY-zb-w0Q"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" id="AzD-YJ-3hb"/>
                     </navigationItem>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
-                    <connections>
-                        <outlet property="back" destination="CIZ-S7-iyh" id="5xX-za-ZBK"/>
-                        <outlet property="maxPrice" destination="Unx-tX-Xt0" id="9Jj-Lt-yIS"/>
-                        <outlet property="minPrice" destination="8Wl-Rc-un6" id="sSt-Vh-4wN"/>
-                        <outlet property="search" destination="eVa-jB-z90" id="W34-Zw-e89"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CKw-dU-6EJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2641.5" y="-3272.25"/>
+            <point key="canvasLocation" x="2137.5" y="-3195.75"/>
         </scene>
         <!--View Post Controller-->
         <scene sceneID="kZC-oP-cnr">
@@ -4260,7 +4249,4 @@
         <image name="eMail" width="65" height="65"/>
         <image name="editPost" width="22" height="22"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="Tny-Yr-Qck"/>
-    </inferredMetricsTieBreakers>
 </document>
